--- a/map.html
+++ b/map.html
@@ -164,19 +164,51 @@ var options =  {
 
 };
 getNDVI();
+
 function addData(data) {
-	for (var i = 0; i < data.length; i++) {
-        console.log(data[i].dt);
+for (var i = 0; i < data.length; i++) {
+
+// Unixtimestamp
+var unixtimestamp = data[i].dt;
+
+// Months array
+var months_arr = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
+
+// Convert timestamp to milliseconds
+var date = new Date(unixtimestamp*1000);
+
+// Year
+var year = date.getFullYear();
+
+// Month
+var month = months_arr[date.getMonth()];
+
+// Day
+var day = date.getDate();
+
+// Hours
+var hours = date.getHours();
+
+// Minutes
+var minutes = "0" + date.getMinutes();
+
+// Seconds
+var seconds = "0" + date.getSeconds();
+
+// Display date time in MM-dd-yyyy h:m:s format
+var convdataTime = month+'-'+day+'-'+year+' '+hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
+
+        console.log(convdataTime);
 		dataPoints.push({
-			x: new Date(data[i].dt),
+			x: new Date(convdataTime),
 			y: data[i].data.max
 		});
         dataPoints1.push({
-			x: new Date(data[i].dt),
+			x: new Date(convdataTime),
 			y: data[i].data.min
 		});
         dataPoints2.push({
-			x: new Date(data[i].dt),
+			x: new Date(convdataTime),
 			y: data[i].data.mean
 		});
 	}
