--- a/map.html
+++ b/map.html
@@ -14,24 +14,28 @@
 	body { margin: 0; padding: 0; }
 	#map { position: absolute; margin:20px; top: 0; bottom: 0; width: 100%; }
     #info {
-       margin:20px;
+       margin:0px;
        float:left;
     }
     #table{
-        float:right;
+        float:left;
     }
 </style>
 </head>
 <body>
 <div class="container">
 <h2 class="text-center">NDVI Dashboard</h2>
-<div class="col-sm-12">
+<div class="row">
     <div id="info" class="col-sm-6"></div>
-    <table id="table" class="table table-bordered col-sm-6">
+<div class="col-sm-6">
+    <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+    <div id="forecastContainer" class="" style="height: 300px; width: 100%;"></div>
+</div>
+<table id="table" class="table table-bordered">
+    <h2>NDVI Index Data</h2>
     <tr><th scope="col">Min(NDVI)</th><th scope="col">Mean(NDVI)</th><th scope="col">Max(NDVI)</th></tr>
     </table>
 </div>
-<div id="chartContainer" style="height: 300px; width: 100%;"></div>
 </div>
 <script>
 	// TO MAKE THE MAP APPEAR YOU MUST
@@ -44,8 +48,6 @@
 // center: [-74.5, 40], // starting position [lng, lat]
 // zoom: 9 // starting zoom
 //});
-
-
 
 function append_json1(data1){
     for(i=0;i<1;i++) {
@@ -77,13 +79,14 @@ function append_json1(data1){
     true_img, false_img, ndvi_img ,evi_img)
 }
 }
+
 function getTiff() {
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
          if (this.readyState == 4 && this.status == 200) {
              //alert(this.responseText);
              var data1 = JSON.parse(this.responseText);
-             console.log(data1);
+            // console.log(data1);
              append_json1(data1);
          }
 
@@ -95,25 +98,27 @@ function getTiff() {
 
 function downloadTiff(){
 	var xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function() {
+    xhttp.onreadystatechange = function(){
          if (this.readyState == 4 && this.status == 200) {
              //alert(this.responseText);
              let data = this.responseText;  
-             console.log(data);
+           //  console.log(data);
          }
     };
     xhttp.open("GET", "http://api.agromonitoring.com/data/1.0/02259768a00/5ac22f004b1ae4000b5b97cf?appid=66bcff8aef9312a104f9b1224c0c7dad", true);
     xhttp.setRequestHeader("Content-type", "application/json");
     //xhttp.send("data");
 }
+
 function append_json2(data2){
-    for(i=0;i<data2.length;i++) {
+    for(i=0;i<data2.length;i++){
        var ndvi_table = document.getElementById('table');
        var tr = document.createElement('tr');
        tr.innerHTML = '<td>'+data2[i].data.min+'</td>'+data2[i].data.mean+'<td>'+data2[i].data.max+'</td>';
        ndvi_table.append(tr);
 }
 }
+
 function getNDVI(){
 	var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
@@ -121,12 +126,26 @@ function getNDVI(){
              //alert(this.responseText);
              let data2 = JSON.parse(this.responseText);
              append_json2(data2);
-             console.log(data2);
+            // console.log(data2);
          }
     };
     xhttp.open("GET", "http://api.agromonitoring.com/agro/1.0/ndvi/history?start=1597046571&end=1602316971&polyid=5f8c326bf936d5000742a6a2&appid=66bcff8aef9312a104f9b1224c0c7dad", true);
     xhttp.setRequestHeader("Content-type", "application/json");
     xhttp.send("data2");
+}
+
+function getForecast(){
+	var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+         if (this.readyState == 4 && this.status == 200) {
+             alert(this.responseText);
+             let forecast_data = JSON.parse(this.responseText);
+             console.log(forecast_data);
+         }
+    };
+    xhttp.open("GET", "http://api.agromonitoring.com/agro/1.0/weather/forecast?polyid=5f8c326bf936d5000742a6a2&appid=66bcff8aef9312a104f9b1224c0c7dad", true);
+    xhttp.setRequestHeader("Content-type", "application/json");
+    xhttp.send("forecast_data");
 }
 
 var dataPoints = [];
@@ -198,7 +217,7 @@ var seconds = "0" + date.getSeconds();
 // Display date time in MM-dd-yyyy h:m:s format
 var convdataTime = month+'-'+day+'-'+year+' '+hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
 
-        console.log(convdataTime);
+        //console.log(convdataTime);
 		dataPoints.push({
 			x: new Date(convdataTime),
 			y: data[i].data.max
@@ -216,10 +235,93 @@ var convdataTime = month+'-'+day+'-'+year+' '+hours + ':' + minutes.substr(-2) +
 }
 $.getJSON("http://api.agromonitoring.com/agro/1.0/ndvi/history?start=1597046571&end=1602316971&polyid=5f8c326bf936d5000742a6a2&appid=66bcff8aef9312a104f9b1224c0c7dad", addData);
 
+var forecastdataPoints = [];
+var forecastdataPoints1 = [];
+var forecastdataPoints2 = [];
+
+var options1 = {
+	animationEnabled: true,
+	theme: "light2",
+	title: {
+		text: "Forecast Data"
+	},
+	axisX: {
+		valueFormatString: "DD MMM YYYY",
+	},
+	axisY: {
+		title: "Temperature(B),Humidity(G)",
+		titleFontSize: 24
+	},
+	data: [{
+		type: "spline", 
+		yValueFormatString: ".##",
+		dataPoints: forecastdataPoints
+	},
+    {
+        type: "spline",
+        yValueFormatString: ".##",
+		dataPoints: forecastdataPoints1
+    },
+    {
+        type: "spline",
+        yValueFormatString: ".##",
+		dataPoints: forecastdataPoints2
+    }]
+
+};
+getForecast();
+function addForecastData(data) {
+for (var i = 0; i < data.length; i++) {
+
+    // Unixtimestamp
+var unixtimestamp = data[i].dt;
+
+// Months array
+var months_arr = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
+
+// Convert timestamp to milliseconds
+var date = new Date(unixtimestamp*1000);
+
+// Year
+var year = date.getFullYear();
+
+// Month
+var month = months_arr[date.getMonth()];
+
+// Day
+var day = date.getDate();
+
+// Hours
+var hours = date.getHours();
+
+// Minutes
+var minutes = "0" + date.getMinutes();
+
+// Seconds
+var seconds = "0" + date.getSeconds();
+
+// Display date time in MM-dd-yyyy h:m:s format
+var convdataTime = month+'-'+day+'-'+year+' '+hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
+
+		forecastdataPoints.push({
+			x: new Date(convdataTime),
+			y: data[i].main.temp
+		});
+        forecastdataPoints1.push({
+			x: new Date(convdataTime),
+			y: data[i].main.humidity
+		});
+        forecastdataPoints2.push({
+			x: new Date(convdataTime),
+			y: data[i].weather.id
+		});
+	}
+	$("#forecastContainer").CanvasJSChart(options1);
+}
+$.getJSON("http://api.agromonitoring.com/agro/1.0/weather/forecast?start=1597046571&end=1602316971&polyid=5f8c326bf936d5000742a6a2&appid=66bcff8aef9312a104f9b1224c0c7dad", addForecastData);
 getTiff();
 downloadTiff();
 
 </script>
- 
 </body>
 </html>
