--- a/public/test2.html
+++ b/public/test2.html
@@ -59,8 +59,8 @@ body {
   z-index: 1;
   right: -115%;
   bottom: -10%;
-  width: 80%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   box-shadow: -230px 0 150px 60vw rgba(0, 0, 0, 0.7);
   border-radius: 100%;
@@ -269,71 +269,71 @@ body {
   <div class="timeline">
     <div class="swiper-container">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image: url(./css/images/1.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/1.jpg);" data-year="2020/11/01">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/01</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/2.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/2.jpg);" data-year="2020/11/02">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/02</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/3.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/3.jpg);" data-year="2020/11/03">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/03</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/4.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/4.jpg);" data-year="2020/11/04">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/04</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/5.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/5.jpg);" data-year="2020/11/05">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/05</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/6.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/6.jpg);" data-year="2020/11/06">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/06</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/7.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/7.jpg);" data-year="2020/11/07">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/07</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/8.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/8.jpg);" data-year="2020/11/08">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/08</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/9.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/9.jpg);" data-year="2020/11/09">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/09</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/10.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/10.jpg);" data-year="2020/11/10">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/10</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/11.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/11.jpg);" data-year="2020/11/11">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/11</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/12.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/12.jpg);" data-year="2020/11/12">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/12</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/13.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/13.jpg);" data-year="2020/11/13">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/13</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/14.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/14.jpg);" data-year="2020/11/14">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/14</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/15.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/15.jpg);" data-year="2020/11/15">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/15</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/16.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/16.jpg);" data-year="2020/11/16">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/16</span>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(./css/images/17.jpg);" data-year="2020">
+        <div class="swiper-slide" style="background-image: url(./css/images/17.jpg);" data-year="2020/11/17">
           <div class="swiper-slide-content"><span class="timeline-year">2020/12/17</span>
           </div>
         </div>
@@ -344,10 +344,9 @@ body {
     </div>
   </div>
 </div>
- 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
 <script>
-var timelineSwiper = new Swiper ('.timeline .swiper-container', {
+var timelineSwiper = new Swiper('.timeline .swiper-container', {
   direction: 'vertical',
   loop: false,
   speed: 1600,
