--- a/public/test2.html
+++ b/public/test2.html
@@ -230,7 +230,7 @@ body {
   .timeline .swiper-button-prev {
     top: 15%;
     left: auto;
-    right: 15%;
+    right: 10%;
     -webkit-transform: rotate(90deg) translate(0, 10px);
             transform: rotate(90deg) translate(0, 10px);
   }
@@ -241,7 +241,7 @@ body {
   .timeline .swiper-button-next {
     top: auto;
     bottom: 15%;
-    right: 15%;
+    right: 10%;
     -webkit-transform: rotate(90deg) translate(0, 10px);
             transform: rotate(90deg) translate(0, 10px);
   }
@@ -347,7 +347,7 @@ body {
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
 <script>
 var timelineSwiper = new Swiper('.timeline .swiper-container', {
-  direction: 'vertical',
+  direction: 'horizontal',
   loop: false,
   speed: 1600,
   pagination: '.swiper-pagination',
