--- a/public/heatmap_analysis.html
+++ b/public/heatmap_analysis.html
@@ -71,7 +71,7 @@ console.log(frames[i]);
 }
 
 var layout = {
-  title: 'Yearly analysis<br>2000 - 2020',
+  title: 'Monthly analysis',
   mapbox: {style: 'mapbox://styles/mapbox/satellite-v9', center: {lat: 36.12073400669619,lon: 139.21555254377927}, zoom:19}, width: 1200, height: 600,
   updatemenus: [{
     x: 0.1,
@@ -122,7 +122,7 @@ var layout = {
     pad: {t: 50, b: 10},
     currentvalue: {
       visible: true,
-      prefix: "Year:",
+      prefix: "Day:",
       xanchor: "right",
       font: {
         size: 20,
